Add Pages: donut, laptop_project_new, ulmo_project, update all pages contents, add donut picture

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <nav>
         <a href="#">Projects</a>
         <a href="#">About Me</a>
-        <a href="#">Contact</a>
     </nav>
 
     <!-- Personal info -->
-    <img src="./user.jpg" alt="User Picture" width="20%" style="border-radius: 10px;">
+    <img src="./user.jpg" alt="User Picture" width="20%" height="20%" style="border-radius: 10px;">
     <p>Trần Vũ Minh Đăng</p>
     <p>Mobile Developer</p>
     <p>Undergraduate: FPT Polytechnic</p>
@@ -38,7 +37,7 @@
                 <p>Start date - End date: 08/2023 - 11/2023</p>
                 <p>Technology: React Native, Firebase</p>
                 <p>Description: Application to sell laptop</p>
-                
+
                 <!-- What done in app -->
                 <div>
                     <p>What to expect:</p>
@@ -70,7 +69,7 @@
                 <p>Personal Project</p>
                 <p>Start date - End date: 01/2024 - NOW</p>
                 <p>Technology: React Native, Firebase</p>
-                <p>Description: Application to sell laptop</p>
+                <p>Description: Application to sell bouquet</p>
                 <div>
                     <p>What to expect:</p>
                     <ol>
@@ -89,6 +88,16 @@
                     </ol>
                 </div>
             </div>
+        </article>
+    </section>
+
+    <section>
+        <h1>Hobbies</h1>
+        <article>
+            <img style="border-radius: 4px;" src="donut.png" width="30%" />
+            <p>Start date - End date: 05/02/2024 - 06/02/2024</p>
+            <p>Technology: Blender</p>
+            <p>Description: A small project</p>
         </article>
     </section>
 
