--- a/laptop_project_old.html
+++ b/laptop_project_old.html
@@ -9,7 +9,7 @@
 
 <body>
     <div>
-        <p>Contain of 4 projects:</p>
+        <p>Contain 4 projects:</p>
         <ul>
             <li>Laptop app old (span through 2 projects)</li>
             <li>Laptop Admin Page</li>
@@ -21,7 +21,8 @@
             <h2>SQL SERVER</h2>
             <p>Personal Project</p>
             <p>Start date - End date: 08/2023 - 11/2023</p>
-            <p>Technology: MySQL, XAMPP, </p>
+            <p>Technology: MySQL, XAMPP </p>
+            <p>Programming Lanugage: PHP</p>
             <p>Description: Application to sell laptop</p>
 
             <!-- What done in app -->
@@ -49,6 +50,7 @@
             <p>Personal Project</p>
             <p>Start date - End date: 08/2023 - 11/2023</p>
             <p>Technology: ReactJs </p>
+            <p>Programming Lanugage: javascript</p>
             <p>Description: Application to sell laptop</p>
             <p>Require: MySQL Server</p>
 
@@ -76,6 +78,7 @@
             <p>Personal Project</p>
             <p>Start date - End date: 08/2023 - 11/2023</p>
             <p>Technology: ReactJs </p>
+            <p>Programming Lanugage: javascript</p>
             <p>Description: Application to sell laptop</p>
             <p>Require: MySQL Server</p>
 
@@ -100,6 +103,7 @@
             <p>Personal Project</p>
             <p>Start date - End date: 08/2023 - 11/2023</p>
             <p>Technology: ReactJs </p>
+            <p>Programming Lanugage: javascript</p>
             <p>Description: Application to sell laptop</p>
             <p>Require: MySQL Server</p>
 
