--- a/donut.html
+++ b/donut.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <p>Note that this is a hobby</p>
-    <img src="donut.png" width="100%"/>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/c0rKh-rxex0?si=y_G0G4wQ8ZOh9ekw"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
     <p>Made in blender, following Blender Guru tutorial</p>
     <p>Texture paint for donut base, geometry nodes for sprinkles</p>
-    
+
+        <h1>Screenshots</h1>
 </body>
+
 </html>
