Rename, reorder project files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
 
 </head>
 
@@ -20,7 +20,7 @@
     <!-- Personal info -->
     <h1>Personal Information</h1>
     <div class="personal_info">
-        <img src="./user.jpg" alt="User Picture" width="20%" height="20%" style="border-radius: 10px;">
+        <img src="./images/user.jpg" alt="User Picture" width="20%" height="20%" style="border-radius: 10px;">
         <div>
             <div class="personal_info_row" style="border-top: 1px solid black;">
                 <p>Full Name:</p>
@@ -54,7 +54,7 @@
     <section class="projects">
         <article class="project_item">
             <div>
-                <img src="florist_shop.jpg" class="img_cover" width="200px" />
+                <img src="./images/florist_shop.jpg" class="img_cover" width="200px" />
             </div>
             <div>
                 <h2>Florist Shop</h2>
@@ -76,13 +76,13 @@
                     <p>Sell bouquet</p>
                 </div>
 
-                <a class="button_project" href="florist_project.html">See More</a>
+                <a class="button_project" href="./pages/florist_project_page.html">See More</a>
             </div>
         </article>
 
         <article class="project_item">
             <div>
-                <img src="project1.jpg" class="img_cover" width="200px" />
+                <img src="./images/project1.jpg" class="img_cover" width="200px" />
             </div>
             <div>
                 <h2>Laptop Firebase</h2>
@@ -104,13 +104,13 @@
                     <p>sell laptop</p>
                 </div>
 
-                <a class="button_project" href="laptop_project_new.html">See More</a>
+                <a class="button_project" href="./pages/laptop_project_new_page.html">See More</a>
             </div>
         </article>
 
         <article class="project_item">
             <div>
-                <img src="project1.jpg" class="img_cover" width="200px" />
+                <img src="./images/project1.jpg" class="img_cover" width="200px" />
             </div>
             <div>
                 <h2>Laptop Original</h2>
@@ -132,7 +132,7 @@
                     <p>My graduation project</p>
                 </div>
 
-                <a class="button_project" href="laptop_project_old.html">See More</a>
+                <a class="button_project" href="./pages/laptop_project_old_page.html">See More</a>
             </div>
         </article>
 
@@ -143,7 +143,7 @@
     <section>
         <article>
             <div>
-                <img src="donut.png" class="img_cover" width="200px" />
+                <img src="./images/donut.png" class="img_cover" width="200px" />
             </div>
             <div>
                 <h2>Donuts</h2>
@@ -165,7 +165,7 @@
                     <p>A small animation showcase donuts</p>
                 </div>
 
-                <a class="button_project" href="donut.html">See More</a>
+                <a class="button_project" href="./pages/donut_page.html">See More</a>
             </div>
         </article>
     </section>
