Create About Me Page

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 </head>
 
 <body>
-    <!-- Navigation -->
     <nav>
-        <a href="#">Projects</a>
-        <a href="#">About Me</a>
+        <a href="">Home</a>
+        <a href="./pages/about_me_page.html">About me</a>
     </nav>
-
     <!-- Personal info -->
     <h1>Personal Information</h1>
     <div class="personal_info">
-        <img src="./images/user.jpg" alt="User Picture" width="20%" height="20%" style="border-radius: 10px;">
+        <img src="./images/user.jpg" alt="User Picture" width="20%" height="20%" style="border-radius: 10px;border: 1px solid black;">
         <div>
             <div class="personal_info_row" style="border-top: 1px solid black;">
                 <p>Full Name:</p>
@@ -47,7 +45,10 @@
                 <p>Intern/Fresher Mobile Developer job</p>
             </div>
         </div>
+
     </div>
+
+
 
     <!-- Projects -->
     <h1>Coding Projects</h1>
