Update pages' titles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <!-- Personal info -->
     <h1>Personal Information</h1>
     <div class="personal_info">
-        <img src="./images/user.jpg" alt="User Picture" width="20%" height="20%" style="border-radius: 10px;border: 1px solid black;">
+        <img src="./images/user.jpg" alt="User Picture" width="20%" height="20%"
+            style="border-radius: 10px;border: 1px solid black;">
         <div>
             <div class="personal_info_row" style="border-top: 1px solid black;">
                 <p>Full Name:</p>
@@ -140,12 +141,100 @@
 
     </section>
 
+    <!-- Projects -->
+    <h1>Other Projects</h1>
+    <section class="projects">
+        <article class="project_item">
+            <div>
+                <img src="./images/florist_shop.jpg" class="img_cover" width="200px" />
+            </div>
+            <div>
+                <h2>Clothes Shop</h2>
+                <p>Personal Project</p>
+                <div class="project_row">
+                    <p>Status:</p>
+                    <p>Ongoing</p>
+                </div>
+                <div class="project_row">
+                    <p>Start - End:</p>
+                    <p> - NOW</p>
+                </div>
+                <div class="project_row">
+                    <p>Technology:</p>
+                    <p>Flutter</p>
+                </div>
+                <div class="project_row" style="margin-bottom: 40px;">
+                    <p>Description:</p>
+                    <p>Sell clothes</p>
+                </div>
+
+                <a class="button_project" href="./pages/florist_project_page.html">See More</a>
+            </div>
+        </article>
+
+        <article class="project_item">
+            <div>
+                <img src="./images/florist_shop.jpg" class="img_cover" width="200px" />
+            </div>
+            <div>
+                <h2>Ulmo Shop</h2>
+                <p>Personal Project</p>
+                <div class="project_row">
+                    <p>Status:</p>
+                    <p>Ongoing</p>
+                </div>
+                <div class="project_row">
+                    <p>Start - End:</p>
+                    <p> - NOW</p>
+                </div>
+                <div class="project_row">
+                    <p>Technology:</p>
+                    <p>Android Studio, Kotlin</p>
+                </div>
+                <div class="project_row" style="margin-bottom: 40px;">
+                    <p>Description:</p>
+                    <p>Sell clothes</p>
+                </div>
+
+                <a class="button_project" href="./pages/florist_project_page.html">See More</a>
+            </div>
+        </article>
+
+        <article class="project_item">
+            <div>
+                <img src="./images/florist_shop.jpg" class="img_cover" width="200px" />
+            </div>
+            <div>
+                <h2>2D Shooter Game</h2>
+                <p>Personal Project</p>
+                <div class="project_row">
+                    <p>Status:</p>
+                    <p>Ongoing</p>
+                </div>
+                <div class="project_row">
+                    <p>Start - End:</p>
+                    <p> - NOW</p>
+                </div>
+                <div class="project_row">
+                    <p>Technology:</p>
+                    <p>Unity</p>
+                </div>
+                <div class="project_row" style="margin-bottom: 40px;">
+                    <p>Description:</p>
+                    <p>Space shooter game</p>
+                </div>
+
+                <a class="button_project" href="./pages/florist_project_page.html">See More</a>
+            </div>
+        </article>
+
+    </section>
+
+
     <h1>Hobbies</h1>
     <section>
-        <article>
-            <div>
-                <img src="./images/donut.png" class="img_cover" width="200px" />
-            </div>
+        <article class="hobbies">
+            <img src="./images/donut.png" class="img_cover" width="200px" />
             <div>
                 <h2>Donuts</h2>
                 <p>Practice</p>
