Add and update page images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav>
-        <a href="">Home</a>
+        <a href="#">Home</a>
         <a href="./pages/about_me_page.html">About me</a>
     </nav>
     <!-- Personal info -->
@@ -73,7 +73,7 @@
                     <p>Technology:</p>
                     <p>React Native, Firebase</p>
                 </div>
-                <div class="project_row" style="margin-bottom: 40px;">
+                <div class="project_row" style="margin-bottom:40px">
                     <p>Description:</p>
                     <p>Sell bouquet</p>
                 </div>
@@ -101,10 +101,11 @@
                     <p>Technology:</p>
                     <p>React Native, Firebase</p>
                 </div>
-                <div class="project_row" style="margin-bottom: 40px;">
+                <div class="project_row" style="margin-bottom:40px">
                     <p>Description:</p>
                     <p>sell laptop</p>
                 </div>
+
 
                 <a class="button_project" href="./pages/laptop_project_new_page.html">See More</a>
             </div>
@@ -112,10 +113,10 @@
 
         <article class="project_item">
             <div>
-                <img src="./images/project1.jpg" class="img_cover" width="200px" />
+                <img src="./images/laptop_expo.jpg" class="img_cover" width="200px" />
             </div>
             <div>
-                <h2>Laptop Original</h2>
+                <h2>Laptop project (old)</h2>
                 <p>Personal Project</p>
                 <div class="project_row">
                     <p>Status:</p>
@@ -129,7 +130,7 @@
                     <p>Technology:</p>
                     <p>React Native, Expo, PHP, MySQL</p>
                 </div>
-                <div class="project_row" style="margin-bottom: 40px;">
+                <div class="project_row" style="margin-bottom:40px">
                     <p>Description:</p>
                     <p>My graduation project</p>
                 </div>
@@ -146,24 +147,24 @@
     <section class="projects">
         <article class="project_item">
             <div>
-                <img src="./images/florist_shop.jpg" class="img_cover" width="200px" />
+                <img src="./images/lafyuu.jpg" class="img_cover" width="200px" />
             </div>
             <div>
                 <h2>Clothes Shop</h2>
                 <p>Personal Project</p>
                 <div class="project_row">
                     <p>Status:</p>
-                    <p>Ongoing</p>
+                    <p>Paused</p>
                 </div>
                 <div class="project_row">
                     <p>Start - End:</p>
-                    <p> - NOW</p>
+                    <p>11/2023 - NOW</p>
                 </div>
                 <div class="project_row">
                     <p>Technology:</p>
                     <p>Flutter</p>
                 </div>
-                <div class="project_row" style="margin-bottom: 40px;">
+                <div class="project_row" style="margin-bottom:40px">
                     <p>Description:</p>
                     <p>Sell clothes</p>
                 </div>
@@ -174,27 +175,28 @@
 
         <article class="project_item">
             <div>
-                <img src="./images/florist_shop.jpg" class="img_cover" width="200px" />
+                <img src="./images/ulmo.jpg" class="img_cover" width="200px" />
             </div>
             <div>
                 <h2>Ulmo Shop</h2>
                 <p>Personal Project</p>
                 <div class="project_row">
                     <p>Status:</p>
-                    <p>Ongoing</p>
+                    <p>Paused</p>
                 </div>
                 <div class="project_row">
                     <p>Start - End:</p>
-                    <p> - NOW</p>
+                    <p> 11/2023 - NOW</p>
                 </div>
                 <div class="project_row">
                     <p>Technology:</p>
                     <p>Android Studio, Kotlin</p>
                 </div>
-                <div class="project_row" style="margin-bottom: 40px;">
+                <div class="project_row" style="margin-bottom:40px">
                     <p>Description:</p>
                     <p>Sell clothes</p>
                 </div>
+
 
                 <a class="button_project" href="./pages/florist_project_page.html">See More</a>
             </div>
@@ -202,28 +204,27 @@
 
         <article class="project_item">
             <div>
-                <img src="./images/florist_shop.jpg" class="img_cover" width="200px" />
+                <img src="./images/shooter.jpg" class="img_cover" width="200px" />
             </div>
             <div>
                 <h2>2D Shooter Game</h2>
                 <p>Personal Project</p>
                 <div class="project_row">
                     <p>Status:</p>
-                    <p>Ongoing</p>
+                    <p>Finished</p>
                 </div>
-                <div class="project_row">
+                <div class="project_row" style="margin-bottom:40px">
                     <p>Start - End:</p>
-                    <p> - NOW</p>
+                    <p>04/05/2023 - 11/05/2023</p>
                 </div>
                 <div class="project_row">
                     <p>Technology:</p>
                     <p>Unity</p>
                 </div>
-                <div class="project_row" style="margin-bottom: 40px;">
+                <div class="project_row">
                     <p>Description:</p>
-                    <p>Space shooter game</p>
+                    <p>Simple space shooter game</p>
                 </div>
-
                 <a class="button_project" href="./pages/florist_project_page.html">See More</a>
             </div>
         </article>
